Brewery page: Fix a few regressions, 'What's on tap' is in place, added a temp/pseudo vertical alignment to content

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -29,7 +29,7 @@ a
 		color: $brand-3
 ul
 	list-style-type: none
-h1,h2
+h1,h2,h3
 	text-transform: uppercase
 h1
 	font-family: $brand
@@ -42,6 +42,11 @@ h2
 	font-family: $robotoc
 	font-weight: 500
 	font-size: 2.5em
+h3
+	font-family: $robotoc
+	font-weight: 600
+	font-size: 2em
+	margin: 0
 p
 	font-size: 1.2em
 	line-height: 1.75em
@@ -138,15 +143,20 @@ header
 		width: 80%
 		max-width: 1280px
 		margin: 0 auto
-		padding: 75px
-	&.pull-left
-		text-align: right
+		padding: 100px
+		box-sizing: border-box
+	&.pull-left,
 	&.pull-right
 		text-align: left
+		.desc
+			padding: 10% 0
+			width: 65%
+			max-width: 720px
 .imgwrap
 	width: 100%
 	height: 100%
 	overflow: hidden
+	background: darken($brand-4, 5%)
 
 
 
@@ -156,3 +166,29 @@ header
 		background: $brand-primary
 	&.pull-left
 		background: $brand-5
+.fold.on-tap .desc
+	width: auto
+	max-width: 100%
+	padding: 50px 0 0 0
+.bgbeer
+	width: 100%
+	height: 360px
+.beeroverlay
+	position: relative
+	padding: 45px 0
+	width: 100%
+	background: $brand-5
+	p
+		font-size: 1.375em
+		margin: 5px 0 0 0
+		color: $brand-3
+	.triangleup
+		position: absolute
+		bottom: 100%
+		left: 50%
+		width: 0
+		height: 0
+		border-left: 75px solid transparent
+		border-right: 75px solid transparent
+		border-bottom: 35px solid $brand-4
+		margin-left: -75px
